Excluded pages and changed footer text.

--- a/_config.yml
+++ b/_config.yml
@@ -189,6 +189,17 @@ exclude:
   - readme_preview/
   - UPGRADING.md
   - vendor
+  - _news/announcement_*.md
+  - _pages/blog.md
+  - _pages/publications.md
+  - _pages/projects.md
+  - _pages/repositories.md
+  - _pages/teaching.md
+  - _pages/books.md
+  - _pages/profiles.md
+  - _pages/dropdown.md
+  - _posts/
+  - assets/jupyter/blog.ipynb
 keep_files:
   - CNAME
   - .nojekyll
@@ -344,11 +355,11 @@ external_links:
 # Jekyll Polyglot
 # -----------------------------------------------------------------------------
 
-languages: ["en-us", "pt-br", "fr-ca"]
+languages: ["en-us", "pt-br"]
 default_lang: "en-us"
 exclude_from_localization: ["assets"]
 lang_from_path: true
-country_flag: false # set true for allowing flag symbol in language toggle
+country_flag: true # set true for allowing flag symbol in language toggle
 parallel_localization: false
 
 # -----------------------------------------------------------------------------
