--- a/_data/pt-br/strings.yml
+++ b/_data/pt-br/strings.yml
@@ -83,9 +83,8 @@ footer:
   copyright: Direitos autorais
   last_updated: "Última atualização:"
 footer_text: > # the ">" symbol means to ignore newlines until "titles:"
-  Desenvolvido em <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> com o tema <a href="https://github.com/george-gca/multi-language-al-folio">multi-language-al-folio</a>.
+  Desenvolvido em <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.
   Hospedado por <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Fotos do <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 latest_posts: últimas postagens
 months:
   long:
