Updated socials and some strings

--- a/_data/pt-br/strings.yml
+++ b/_data/pt-br/strings.yml
@@ -26,7 +26,7 @@ citation:
 collections:
   books: livros
   posts: postagens
-contact_note: Você pode até adicionar uma pequena observação sobre qual dessas é a melhor maneira de entrar em contato com você.
+contact_note: Me adiciona no LinkedIn, que a gente bate um papo.
 cv:
   address: Endereço
   area: Área
