--- a/_data/en-us/strings.yml
+++ b/_data/en-us/strings.yml
@@ -26,7 +26,7 @@ citation:
 collections:
   books: books
   posts: posts
-contact_note: You can even add a little note about which of these is the best way to reach you.
+contact_note: Add me on LinkedIn, so we can chat.
 cv:
   address: Address
   area: Area
